--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.0",
-    "@docusaurus/types": "^3.2.0"
+    "@docusaurus/types": "^3.2.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "browserslist": {
     "production": [
