--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"write-translations": "docusaurus write-translations",
 		"write-heading-ids": "docusaurus write-heading-ids",
 		"prettier": "npx prettier . --write",
-		"mdx-check": "npx docusaurus-mdx-checker"
+		"mdx-check": "npx docusaurus-mdx-checker",
+		"typecheck": "tsc"
 	},
 	"dependencies": {
 		"@docusaurus/core": "^3.2.0",
