--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@docusaurus/core": "^3.5.2",
+		"@docusaurus/plugin-google-gtag": "^3.7.0",
 		"@docusaurus/preset-classic": "^3.5.2",
 		"@docusaurus/theme-mermaid": "^3.5.2",
 		"@mdx-js/react": "^3.0.1",
