--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,16 @@
 		"no-inline-html": false,
 		"link-image-reference-definitions": false,
 		"fenced-code-language": false
+	},
+	"files.exclude": {
+		"**/.git": true,
+		"**/.svn": true,
+		"**/.hg": true,
+		"**/.DS_Store": true,
+		"**/Thumbs.db": true,
+		"**/.retool_types/**": true,
+		"**/*tsconfig.json": true,
+		".cache": true,
+		"retool.config.json": true
 	}
 }
